# pdf-ocr-service

./: Dockerfile  main.py  pyproject.toml
