[project]
name = "runpod-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "paddleocr>=3.1.1",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.3",
    "requests>=2.32.5",
    "runpod>=1.7.13",
]
